# -

./: .gitignore  CMakeLists.txt  DESIGN.md  Makefile  RK3568_GPIO.Markdown  UI_PREVIEW.html  convert_gif.py  lv_conf.h  lvglsim  toolchain_rk3568.cmake
src/: main.c
src/UI/: CMakeLists.txt  bg_login.h  gif_anim.h  img_bg.c  img_bg.h  img_logo.c  img_logo.h  project.info  splash_anim.c  splash_anim.h  ui.c  ui.h  ui_events.h
src/UI/screens/: ui_2048.c  ui_Album.c  ui_Album.h  ui_Controls.c  ui_Game.c  ui_Game.h  ui_Login.c  ui_MainMenu.c  ui_MainMenu.h  ui_Music.c  ui_Music.h  ui_RecogPage.c  ui_RecogPage.h  ui_Recognition.c  ui_Recognition.h  ui_Register.c  ui_Register.h  ui_Screen1.c  ui_Screen1.h  ui_Snake.c  ui_Splash.c  ui_Splash.h  ui_Video.c  ui_Video.h
src/lib/: album_mgr.c  album_mgr.h  auth.c  auth.h  camera.c  camera.h  face_detect.c  face_detect.h  hw_ctrl.c  hw_ctrl.h  preload.c  preload.h  v4l2_capture.c  v4l2_capture.h
